[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman-opup-tools"
version = "0.1.0"
description = "Utilities for Roman Space Telescope operations and planning."
requires-python = ">=3.12"

dependencies = [
    "astropy>=6.0",
    "astroquery>=0.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "pysiaf>=0.22",
    "scipy>=1.11",
    "roman-visit-viewer @ git+https://github.com/Skyhawk172/roman_visit_viewer.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Repository = "https://github.com/RomanSpaceTelescope/roman-opup-tools"

[tool.setuptools.packages.find]
where = ["src"]